add nextcloud to rest of the system

--- a/internal/reloader/testdata/50_example.env
+++ b/internal/reloader/testdata/50_example.env
@@ -114,6 +114,13 @@ GOTRUE_EXTERNAL_KAKAO_CLIENT_ID=""
 GOTRUE_EXTERNAL_KAKAO_SECRET=""
 GOTRUE_EXTERNAL_KAKAO_REDIRECT_URI="http://localhost:9999/callback"
 
+# Nextcloud OAuth config
+GOTRUE_EXTERNAL_NEXTCLOUD_ENABLED="false"
+GOTRUE_EXTERNAL_NEXTCLOUD_CLIENT_ID=""
+GOTRUE_EXTERNAL_NEXTCLOUD_SECRET=""
+GOTRUE_EXTERNAL_NEXTCLOUD_REDIRECT_URI="https://localhost:9999/callback"
+GOTRUE_EXTERNAL_NEXTCLOUD_URL="https://nextcloud.example.com/index.php"
+
 # Notion OAuth config
 GOTRUE_EXTERNAL_NOTION_ENABLED="false"
 GOTRUE_EXTERNAL_NOTION_CLIENT_ID=""
