--- a/hack/test.env
+++ b/hack/test.env
@@ -72,6 +72,11 @@ GOTRUE_EXTERNAL_GOOGLE_ENABLED=true
 GOTRUE_EXTERNAL_GOOGLE_CLIENT_ID=testclientid
 GOTRUE_EXTERNAL_GOOGLE_SECRET=testsecret
 GOTRUE_EXTERNAL_GOOGLE_REDIRECT_URI=https://identity.services.netlify.com/callback
+GOTRUE_EXTERNAL_NEXTCLOUD_ENABLED=true
+GOTRUE_EXTERNAL_NEXTCLOUD_CLIENT_ID=testclientid
+GOTRUE_EXTERNAL_NEXTCLOUD_SECRET=testsecret
+GOTRUE_EXTERNAL_NEXTCLOUD_REDIRECT_URI=https://identity.services.netlify.com/callback
+GOTRUE_EXTERNAL_NEXTCLOUD_URL=https://nextcloud.example.com/index.php
 GOTRUE_EXTERNAL_NOTION_ENABLED=true
 GOTRUE_EXTERNAL_NOTION_CLIENT_ID=testclientid
 GOTRUE_EXTERNAL_NOTION_SECRET=testsecret
