--- a/example.env
+++ b/example.env
@@ -114,12 +114,12 @@ GOTRUE_EXTERNAL_KAKAO_CLIENT_ID=""
 GOTRUE_EXTERNAL_KAKAO_SECRET=""
 GOTRUE_EXTERNAL_KAKAO_REDIRECT_URI="http://localhost:9999/callback"
 
-# Keycloak OAuth config
+# Nextcloud OAuth config
 GOTRUE_EXTERNAL_NEXTCLOUD_ENABLED="false"
 GOTRUE_EXTERNAL_NEXTCLOUD_CLIENT_ID=""
 GOTRUE_EXTERNAL_NEXTCLOUD_SECRET=""
 GOTRUE_EXTERNAL_NEXTCLOUD_REDIRECT_URI="http://localhost:9999/callback"
-GOTRUE_EXTERNAL_NEXTCLOUD_URL="https://nextcloud.example.com/index.php"
+GOTRUE_EXTERNAL_NEXTCLOUD_URL="https://nextcloud.example.com/index.php" # May be of form https://cloud.example.org or https://cloud.example.org/index.php
 
 # Notion OAuth config
 GOTRUE_EXTERNAL_NOTION_ENABLED="false"
